--- a/src/app/game-board/game.component.html
+++ b/src/app/game-board/game.component.html
@@ -7,3 +7,13 @@
     </div>
   </div>
 </div>
+
+<div class="game-message" *ngIf="isGameOver">
+  <p *ngIf="winner !== null">
+    Player {{ getPlayerColorName(winner) }} wins!
+  </p>
+  <p *ngIf="winner === null">
+    It's a draw!
+  </p>
+  <button class="restart-button" (click)="resetGrid()">Play Again</button>
+</div>
