--- a/src/app/game-board/game.component.html
+++ b/src/app/game-board/game.component.html
@@ -1,4 +1,6 @@
-<h1>Connect Four</h1>
+<div class="title-container">
+  <h1>Connect Four</h1>
+</div>
 
 <div class="grid">
   <div class="row" *ngFor="let row of grid">
